<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/mainLayoutCourse">

    <androidx.cardview.widget.CardView
        style="@style/ItemVerticalStyle"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="2dp"
        android:layout_margin="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:foreground="?android:selectableItemBackground">
<!--app:cardBackgroundColor="@color/background"
app:cardBackgroundColor="@color/blue"-->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <View
                android:id="@+id/view_separation"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/lightGrey"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/course_title"
                style="@style/TitleTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/item_course_margin"
                android:text="@string/home_page_course_name"
                app:layout_constraintBottom_toTopOf="@+id/view_separation"
                app:layout_constraintStart_toEndOf="@+id/cardView" />

            <TextView
                android:id="@+id/course_classroom"
                style="@style/SubtitleTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/item_course_margin"
                android:text="@string/home_page_course_classroom"
                app:layout_constraintStart_toEndOf="@+id/cardView"
                app:layout_constraintTop_toBottomOf="@+id/view_separation" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                style="@style/ItemVerticalCardStyle"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/item_course_box_margin"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/course_time"
                        style="@style/DefaultTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/dash"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/course_start_time"
                        style="@style/DefaultTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/home_page_course_start_time"
                        app:layout_constraintBottom_toTopOf="@+id/course_time" />

                    <TextView
                        android:id="@+id/course_end_time"
                        style="@style/DefaultTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/home_page_course_end_time"
                        app:layout_constraintTop_toBottomOf="@+id/course_time" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                style="@style/ItemVerticalCardStyle"
                android:layout_width="80dp"
                android:layout_height="50dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp"
                android:layout_marginEnd="@dimen/item_course_box_margin"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/view_separation"
                app:layout_constraintTop_toTopOf="parent" >

                <TextView
                    android:id="@+id/type_course"
                    style="@style/DefaultTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/home_page_course_type"
                    android:gravity="center" />


            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>



</androidx.constraintlayout.widget.ConstraintLayout>